@@ -34,22 +34,14 @@ You need the following software to use FontTools:
 
 <UL>
 <LI>
-  <B>Python</B>. The fresh versions as well as older versions (You need 1.5.1 or higher) can be obtained here:
+  <B>Python</B>. The fresh versions as well as older versions (You need 2.0 or higher) can be obtained here:
   <A HREF="http://www.python.org/download/">http://www.python.org/download/</A>
   or here:
   <A HREF="http://sourceforge.net/projects/python/">http://sourceforge.net/projects/python/</A>
   
   <P>Windows: grab the Windows installer, run the full install.
   <BR>Un*x: follow the build instructions.
-  <BR>Linux: maybe you already *have* Python: check whether you have
-  version 1.5.1 or newer.
   <BR>MacOS: grab the installer, run "Easy Install"
-
-  <P><B>Important:</B> If you have (or decided to install) a Python version
-  earlier than 2.0, you must also install
-  <A HREF="http://www.python.org/sigs/distutils-sig/download.html">distutils</A>,
-  a set of tools to help build and install Python packages. (It is included with
-  Python 2.0 and higher.)
 <P>
 <LI>
   The <B>Numeric Python</B> extension (you don't need this under MacOS, since 	it's
